# ai-writer

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  SPEC.md  TASKS.md  pyproject.toml  ruff.toml  setup.cfg
commands/: write-blog.md  write-linkedin.md  write-next.md  write-paper.md  write-status.md  write-thesis.md  write-x-thread.md  write.md
config/: blog.yaml  linkedin.yaml  paper.yaml  settings.yaml  thesis.yaml  twitter.yaml
lib/writing/: __init__.py  backends.py  bibliography.py  citation_audit.py  content_types.py  corpus.py  fewshot.py  llm_config.py  models.py  pipeline.py  prompt_assembler.py  session.py  settings.py  style.py  validators.py
lib/writing/integrations/: __init__.py  csw_adapter.py  dspy_signatures.py  instructor_models.py  opendraft_patterns.py  storm_adapter.py
lib/writing/workflows/: __init__.py  long_form.py  short_form.py
scripts/: install_claude_commands.py  live_pipeline_harness.py
templates/: blog.md  linkedin.md  paper.md  style_analysis.md  thesis.md  twitter.md
tests/: __init__.py  test_backends_config.py  test_bibliography.py  test_citation_audit.py  test_corpus.py  test_fewshot.py  test_llm_config.py  test_pipeline_backends.py  test_prompt_assembler.py  test_session.py  test_settings_llm.py  test_style.py  test_validators.py
tests/fixtures/: sample.bib  sample_bibliography.md
tests/fixtures/sample_corpus/: paper1.md  paper2.tex
tests/integration/: __init__.py  test_full_workflow.py
workspace/hgm-hyperagents/evidence/: index.md  manifest.json
workspace/hgm-hyperagents/evidence/inputs/: references.md
workspace/hgm-hyperagents/evidence/logs/: codex_sections_4_5.json
workspace/hgm-hyperagents/evidence/paper/: final_paper.md  section_00_abstract.md  section_01_introduction.md  section_02_preliminaries_and_related_work.md  section_03_from_single_agent_self_improvement_to_clade_metapr.md  section_04_multi_agent_recursive_self_improvement_and_the_fro.md  section_05_hyperagent_architectures.md  (+4 more)
(+29 files in other folders)
