[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-writer"
version = "0.1.0"
description = "A writing system that leverages Claude Code and Codex for structured document generation."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Iacob Alexandru Andrei"},
]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "bibtexparser>=1.4",
]

[project.optional-dependencies]
all = [
    "knowledge-storm",
    "dspy-ai",
    "instructor",
]
nlp = [
    "spacy>=3.0",
]

[tool.setuptools.packages.find]
where = ["lib"]

[tool.setuptools.package-dir]
"" = "lib"
